# sidr

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO  velosidr.yaml
.world/: build.sh  build_config.sh  clean.sh  config.sh  install.sh  setup.sh
src/: ese.rs  fields.rs  lib.rs  main.rs  report.rs  shared.rs  sqlite.rs  utils.rs
tests/: dtformat.c  ese_2_csv.py  export_csv.sql  gen_reports.rs  integration_tests.rs  json_2_csv.py  sql_2_csv.py
tests/goldenfiles/: DESKTOP-80RDGLC_Activity_History_Report.csv  DESKTOP-80RDGLC_Activity_History_Report.json  DESKTOP-80RDGLC_File_Report.csv  DESKTOP-80RDGLC_File_Report.json  DESKTOP-80RDGLC_Internet_History_Report.csv  DESKTOP-80RDGLC_Internet_History_Report.json  DESKTOP-O47KVAD_Activity_History_Report.csv  DESKTOP-O47KVAD_Activity_History_Report.json  DESKTOP-O47KVAD_File_Report.csv  DESKTOP-O47KVAD_File_Report.json  DESKTOP-O47KVAD_Internet_History_Report.csv  DESKTOP-O47KVAD_Internet_History_Report.json
tests/testdata/sqlite/: Windows.db
