[package]
name = "windows_search_artifact"
version = "0.1.0"
authors = ["Aon"]
edition = "2021"
default-run = "windows_search_artifact"

[lib]
name = "wsa_lib"
path = "src/lib.rs"

[[bin]]
name = "external_cfg"
path = "src/bin/external_cfg.rs"

[dependencies]
ese_parser_lib = { git = "ssh://git@stash.strozfriedberg.com/asdf/ese_parser.git", features = ["nt_comparison"]}
sqlite = "0.30.4"
serde = { version = "*", features = ["derive"] }
serde_yaml = "0.9.17"
ouroboros = "0.15.6"
num = "0.4.0"

simple-error = "0.3.0"
chrono = "0.4"
bitflags = "1.2.1"
clap = { version = "4.1.7", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"
function_name = "0.3.0"
multimap = "0.8.3"
glob = "0.3.1"
csv = "1.2.1"
json = "0.12.4"
once_cell = "1.17.1"
evalexpr = { version = "8.1.0", features = ["regex_support"] }

[dependencies.sqlite3-sys]
version = "0.14"
default-features = false

[dev-dependencies]
tempdir = "0.3.7"
