[package]
name = "sidr"
license = "Apache-2.0"
readme = "README.md"

version = "0.9.2"
authors = ["Aon"]
edition = "2021"
default-run = "sidr"

[lib]
name = "wsa_lib"
path = "src/lib.rs"

[[bin]]
name = "sidr"
path = "src/main.rs"

[[bin]]
name = "external_cfg"
path = "src/bin/external_cfg.rs"

[dependencies]
ese_parser_lib = { git = "https://github.com/strozfriedberg/ese_parser.git", tag="v0.2.1"}
sqlite = "0.30.4"
serde = { version = "*", features = ["derive"] }
serde_yaml = "0.9.17"
serde_json = "1.0.96"
owning_ref = "0.4.1"
num = "0.4.0"

simple-error = "0.3.0"
chrono = "^0.4"
bitflags = ">= 2.3.3"
clap = { version = "4.1.7", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
function_name = "0.3.0"
multimap = "0.9.0"
glob = "0.3.1"
csv = "1.2.1"
json = "0.12.4"
once_cell = "1.17.1"
evalexpr = { version = "9.0.0", features = ["regex_support"] }
walkdir = "2.3.3"
camino = "1.1.4"
itertools = "0.10.5"
tempdir = "0.3.7"
exitcode = "1.1.2"

[dependencies.sqlite3-sys]
version = "0.14"
default-features = false

